--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
     </table>
     <br>
-    <a href="submit.html"><input type="submit"></a>
+    <a href=" https://hemanthpenke.github.io/Aditya824-Pull-Request/"><input type="submit"></a>
     </center>
     </div>
 
