--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="form">
     <center>
         <img src="Oceanapps logo.png" ><br><br>
-      <h2><b>EMPLOYEES DATA</b></h2>
+      <h2><b>STUDENT DATA</b></h2>
       <table>
         <tr>
             <td><label>Name : </label></td>
@@ -32,13 +32,13 @@
             <td><input type="email"></td>
         </tr>
         <tr>
-            <td><label>Country :</label></td>
+            <td><label>Branch :</label></td>
             <td><select>
-                   <option>Not Selected</option>
-                   <option>India</option>
-                   <option>US</option>
-                   <option>Australia</option>
-                   <option>China</option>
+                   <option>ECE</option>
+                   <option>CSE</option>
+                   <option>Civil</option>
+                   <option>EEE</option>
+                   <option>Mech</option>
                 </select>
             </td>
         </tr>
