--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </tr>
         
         <tr>
-            <td><label>Employee ID : </label></td>
+            <td><label>Student ID : </label></td>
             <td><input type="text"></td>
         </tr>
         <tr>
