--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <div id="form">
     <center>
-        <img src="Oceanapps logo.png" ><br><br>
+        <a href="http://www.oceanapps.in"><img src="Oceanapps logo.png" ></a><br><br>
       <h2><b>STUDENT DATA</b></h2>
       <table>
         <tr>
@@ -34,6 +34,7 @@
         <tr>
             <td><label>Branch :</label></td>
             <td><select>
+                   <option>Not Selected</option>
                    <option>ECE</option>
                    <option>CSE</option>
                    <option>Civil</option>
